--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,6 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "./styles/global.css";
-const pageTitle = "Astro blog tutorial";
 ---
 
 <html lang="en">
@@ -11,11 +10,18 @@ const pageTitle = "Astro blog tutorial";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
+    <title>about me</title>
   </head>
   <body>
     <Header />
-    <h1>{pageTitle}</h1>
+    <h1>My astro Site</h1>
+    <h2>My astro learning blog</h2>
+    <p>This is tutorial.</p>
+    <ul>
+      <li><a href="/posts/post-1">Post #1</a></li>
+      <li><a href="/posts/post-2">Post #2</a></li>
+      <li><a href="/posts/post-3">Post #3</a></li>
+    </ul>
     <Footer />
     <script>
       import "../scripts/menu.js";
