--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,6 +18,7 @@ const username = "withastro";
 <style>
   footer {
     display: flex;
+    align-items: center;
     gap: 1rem;
     margin-top: 3rem;
   }
