--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -6,9 +6,10 @@ const { platform, username } = Astro.props;
 
 <style>
   a {
-    padding: 1rem 2rem;
+    padding: 0.25rem 0.5rem;
     color: white;
     background-color: #4c1d95;
+    border-radius: 0.5rem;
     text-decoration: none;
   }
 </style>
