--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,12 @@
 ---
+// const navigation = ["home", "about", "blog", "tags"];
 ---
 
-<div class="nav-links">
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
-  <a href="/tags/">tags</a>
-</div>
+<nav class="my-4">
+  <ul class="flex space-x-4 font-bold">
+    <li><a href="/">d9th</a></li>
+    <li><a href="/blog/">Blog</a></li>
+    <li><a href="/about/">About</a></li>
+    <li><a href="/tags/">tags</a></li>
+  </ul>
+</nav>
