--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,13 +5,16 @@ const pageTitle = "Astro blog";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h2>My astro learning blog</h2>
-  <p>This is tutorial.</p>
+  <h2 class="mb-4 text-xl font-bold text-gray-700">My astro learning blog</h2>
   <ul>
     {
-      allPosts.map(post => (
-        <li>
-          <a href={post.url}>{post.frontmatter.title}</a>
+      allPosts.reverse().map(post => (
+        <li class="mb-2">
+          <a href={post.url} class="text-gray-700 font-bold underline">
+            {post.frontmatter.title}
+          </a>
+          <p>{post.frontmatter.description}</p>
+          <p>{post.frontmatter.pubDate}</p>
         </li>
       ))
     }
