--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const platform = "github";
 const username = "withastro";
 ---
 
-<footer>
+<footer class="my-8 border">
   <p>
     Learn more about my projects on <a
       href={`https://www.${platform}.com/${username}`}>{platform}</a
@@ -14,12 +14,3 @@ const username = "withastro";
   <Social platform="github" username="astrodotbuild" />
   <Social platform="youtube" username="astrodotbuild" />
 </footer>
-
-<style>
-  footer {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 3rem;
-  }
-</style>
