--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,11 @@
 ---
 import Navigation from "./Navigation.astro";
-import Hamburger from "./Hamburger.astro";
-import ThemeIcon from "./ThemeIcon.astro";
+// import Hamburger from "./Hamburger.astro";
+// import ThemeIcon from "./ThemeIcon.astro";
 ---
 
 <header>
-  <nav>
-    <Hamburger />
-    <ThemeIcon />
-    <Navigation />
-  </nav>
+  <!-- <Hamburger /> -->
+  <!-- <ThemeIcon /> -->
+  <Navigation />
 </header>
