--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,6 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import "../styles/global.css";
-
-const foo = "Home Page";
 const { pageTitle } = Astro.props;
 ---
 
@@ -16,12 +13,11 @@ const { pageTitle } = Astro.props;
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Header />
-    <h1>{pageTitle}</h1>
-    <slot />
-    <Footer />
-    <script>
-      import "../scripts/menu.js";
-    </script>
+    <div class="p-4">
+      <Header />
+      <h1 class="my-8 text-3xl font-bold">{pageTitle}</h1>
+      <slot />
+      <Footer />
+    </div>
   </body>
 </html>
