--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -4,39 +4,20 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <p><em>{frontmatter.description}</em></p>
-  <p>{frontmatter.pubDate.slice(0, 10)}</p>
+  <p class="my-4">{frontmatter.description}</p>
+  <p class="my-4">{new Date(frontmatter.pubDate)}</p>
   <p>Written by: {frontmatter.author}</p>
-  <div class="tags">
+  <div class="my-4 flex space-x-2">
     {
       frontmatter.tags.map(tag => (
-        <p class="tag">
+        <p class="px-2 py-1 border rounded-md bg-indigo-100">
           <a href={`/tags/${tag}`}>{tag}</a>
         </p>
       ))
     }
   </div>
 
-  <slot />
+  <div class="prose">
+    <slot />
+  </div>
 </BaseLayout>
-
-<style>
-  a {
-    color: #00539f;
-  }
-
-  .tags {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-  }
-
-  .tag {
-    margin: 0.25em;
-    border: dotted 1px #a1a1a1;
-    border-radius: 0.5em;
-    padding: 0.5em 1em;
-    font-size: 1.15em;
-    background-color: #f8fcfd;
-  }
-</style>
