--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,4 +1,7 @@
 ---
+// TODO
+// このファイルを[slug].astroへ変えても良さそうだ
+
 import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
